--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
         "@types/chrome": "0.0.192",
         "@types/firefox": "0.0.31",
         "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.1",
         "eslint": "^8.19.0",
+        "less-loader": "^11.0.0",
+        "sass-loader": "^13.0.2",
+        "style-loader": "^3.3.1",
         "ts-loader": "^9.3.1",
         "typescript": "^4.7.4",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.10.0",
-        "webpack-merge": "^5.8.0"
-    }
+        "webpack-merge": "^5.8.0",
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^5.2.0-beta1"
+    },
+    "dependencies": {}
 }
