--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "flyff_universe_autohotkey",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -25,6 +25,8 @@
         "webpack-cli": "^4.10.0",
         "webpack-merge": "^5.8.0",
         "@popperjs/core": "^2.11.5",
-        "bootstrap": "^5.2.0-beta1"
+        "bootstrap": "^5.2.0-beta1",
+        "@types/draggabilly": "^2.1.3",
+        "draggabilly": "^3.0.0"
     }
 }
