--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,19 +2,13 @@
     "eslint.autoFixOnSave": true,
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-        "source.organizeImports": true,
-
-        // For ESLint
-        "source.fixAll.eslint": true,
-        // For TSLint
-        "source.fixAll.tslint": true,
-        // For Stylelint
-        "source.fixAll.stylelint": true,
-        // For Prettier
-        "source.fixAll.prettier": true,
-
-        "source.fixAll": true
+        "source.organizeImports": "explicit",
+        "source.fixAll.eslint": "explicit",
+        "source.fixAll.tslint": "explicit",
+        "source.fixAll.stylelint": "explicit",
+        "source.fixAll.prettier": "explicit",
+        "source.fixAll": "explicit"
     },
     "files.eol": "\r\n",
-    "files.autoSave": "onFocusChange",
+    "files.autoSave": "onFocusChange"
 }
