--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
     "compilerOptions": {
         "strict": true,
-        "module": "commonjs",
-        "target": "es6",
+        "incremental": true,
+        "lib": ["dom", "esnext"],
+        "module": "esnext",
+        "moduleResolution": "node",
         "esModuleInterop": true,
         "sourceMap": true,
         "rootDir": "./",
         "outDir": "dist/js",
         "noEmitOnError": true,
-        "typeRoots": ["node_modules/@types"],
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "types": []
     }
 }
